
docsdir=$(docdir)
nobase_dist_docs_DATA = \
Ramaswamy2010.pdf \
Ramaswamy2011.pdf \
Ramaswamy2011c.pdf \
Ramaswamy2009.pdf \
tutorial/tutorial.html \
tutorial/media/grayscott_alpha7.mp4 \
tutorial/media/grayscott_alpha.webm \
tutorial/media/grayscott_mv7.mp4 \
tutorial/media/grayscott_mv7.ogv \
tutorial/media/sbml_editor.jpg \
tutorial/media/tutorial.css \
tutorial/media/grayscott_selfsplit7.ogv \
tutorial/media/grayscott_mv.ogv \
tutorial/media/grayscott_selfsplit7.webm \
tutorial/media/grayscott_selfsplit.webm \
tutorial/media/grayscott_alpha7.webm \
tutorial/media/grayscott_mv.webm \
tutorial/media/heats.jpg \
tutorial/media/grayscott_mv7.webm \
tutorial/media/grayscott_alpha7.ogv \
tutorial/media/grayscott_alpha.ogv \
tutorial/media/grayscott_selfsplit.ogv
