nobase_pkginclude_HEADERS = \
datamodel/CompositionRejectionSamplerData.h \
datamodel/detail/JaggedMatrix.hpp \
datamodel/detail/Base.hpp \
datamodel/detail/Model.h \
datamodel/detail/Reaction.h \
datamodel/detail/ReactionWrapper.hpp \
datamodel/detail/Species.h \
datamodel/detail/SpeciesReference.h \
datamodel/detail/SBMLHelper.hpp \
datamodel/detail/XMLTypeDefinitions.h \
datamodel/detail/VolumeDecomposition.hpp \
datamodel/detail/Subvolume.hpp \
datamodel/detail/Subvolume_DM.hpp \
datamodel/detail/Subvolume_PDM.hpp \
datamodel/detail/Subvolume_SPDM.hpp \
datamodel/detail/Subvolume_PSSACR.hpp \
datamodel/DataModel.h \
datamodel/DataModel_DM.h \
datamodel/DataModel_PDM.h \
datamodel/DataModel_PSSACR.h \
datamodel/DataModel_SPDM.h \
datamodel/PSSACR_Bins.h \
datamodel/SimulationInfo.h \
grouping/GroupingModule.h \
grouping/GroupingModule_DM.h \
grouping/GroupingModule_PDM.h \
grouping/GroupingModule_PSSACR.h \
grouping/GroupingModule_SPDM.h \
sampling/CompositionRejectionSampler.h \
sampling/SamplingModule.h \
sampling/SamplingModule_DM.h \
sampling/SamplingModule_PDM.h \
sampling/SamplingModule_PSSACR.h \
sampling/SamplingModule_SPDM.h \
update/UpdateModule.h \
update/UpdateModule_DM.h \
update/UpdateModule_PDM.h \
update/UpdateModule_PSSACR.h \
update/UpdateModule_SPDM.h \
util/MPIWrapper.h \
util/Combinations.h \
util/FileSystem.h \
util/Indexing.h \
util/InplaceMemory.h \
util/Timing.h \
util/Maths.h \
util/IO.hpp \
util/ProgramOptionsBase.hpp \
util/SimulationDataSource.hpp \
PSSA.h \
stdheaders.h \
typedefs.h \
config.h
